--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
-title:              Clean Blog
-email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
-author:             Start Bootstrap
-baseurl:            "/startbootstrap-clean-blog-jekyll"
-url:                "https://startbootstrap.github.io"
+title:              Datacrunch
+email:              info@datacrunch.ca
+description:        Tutorials
+author:             Datacrunch
+baseurl:            ""
+url:                "https://pnvnd.github.io"
 
 # Social Profiles
-twitter_username:   SBootstrap
-github_username:    StartBootstrap
-facebook_username:  StartBootstrap
+twitter_username:   
+github_username:    pnvnd
+facebook_username:  
 instagram_username:  
-linkedin_username:
+linkedin_username:  pnvnd
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
